{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 29,
  "lineage": "1e36c646-0e53-6140-28f0-2378b54017d9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-11T01:12:59.716-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-386405/global/firewalls/test-firewall-http",
            "log_config": [],
            "name": "test-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/networks/tf-test-vpc",
            "priority": 1000,
            "project": "terraform-386405",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/firewalls/test-firewall-http",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "http-lb"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-11T01:13:13.233-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-386405/global/firewalls/test-firewall-internal",
            "log_config": [],
            "name": "test-firewall-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/networks/tf-test-vpc",
            "priority": 1000,
            "project": "terraform-386405",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/firewalls/test-firewall-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "internal"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-05-11T01:12:59.720-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-386405/global/firewalls/test-firewall-ssh",
            "log_config": [],
            "name": "test-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/networks/tf-test-vpc",
            "priority": 1000,
            "project": "terraform-386405",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/firewalls/test-firewall-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-386405/global/networks/tf-test-vpc",
            "mtu": 1460,
            "name": "tf-test-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-386405",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/networks/tf-test-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-05-11T01:11:39.938-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraform-386405/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/networks/tf-test-vpc",
            "project": "terraform-386405",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-386405/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "terraform-386405/us-central1/my-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraform-386405",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_router.this",
            "google_compute_subnetwork.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-11T01:11:26.496-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-386405/regions/us-central1/subnetworks/tf-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "tf-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-386405/global/networks/tf-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-386405",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-386405/regions/us-central1/subnetworks/tf-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    }
  ]
}